Day 18 Complete: Boiling Boulders - Surface Area of Cubes

--- a/Puzzles/Puzzles.csproj
+++ b/Puzzles/Puzzles.csproj
@@ -20,5 +20,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Day16\input - Copy.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 	
 </Project>
