--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -37,4 +37,13 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Day18Test\input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Day18Test\results.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
